Working product, brand, category  creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,23 +5,13 @@ kafka.value.deserializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufDe
 kafka.value.serializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufSerializer
 kafka.advertised.listeners=PLAINTEXT://localhost:9092
 
-mp.messaging.incoming.in-products.connector=smallrye-kafka
-mp.messaging.incoming.in-products.topic=in-products
-mp.messaging.incoming.in-products.group.id=product-catalog
-mp.messaging.incoming.in-products.auto.offset.reset=earliest
-mp.messaging.incoming.in-products.specific.protobuf.value.type=io.dmcapps.proto.catalog.Product
 
-mp.messaging.incoming.in-brands.connector=smallrye-kafka
-mp.messaging.incoming.in-brands.topic=in-brands
-mp.messaging.incoming.in-brands.group.id=product-catalog
-mp.messaging.incoming.in-brands.auto.offset.reset=earliest
-mp.messaging.incoming.in-brands.specific.protobuf.value.type=io.dmcapps.proto.catalog.Brand
+mp.messaging.incoming.product-catalog-transactions.connector=smallrye-kafka
+mp.messaging.incoming.product-catalog-transactions.topic=product-catalog-transactions
+mp.messaging.incoming.product-catalog-transactions.group.id=product-catalog
+mp.messaging.incoming.product-catalog-transactions.auto.offset.reset=earliest
+mp.messaging.incoming.product-catalog-transactions.specific.protobuf.value.type=io.dmcapps.proto.catalog.Transaction
 
-mp.messaging.incoming.in-categories.connector=smallrye-kafka
-mp.messaging.incoming.in-categories.topic=in-categories
-mp.messaging.incoming.in-categories.group.id=product-catalog
-mp.messaging.incoming.in-categories.auto.offset.reset=earliest
-mp.messaging.incoming.in-categories.specific.protobuf.value.type=io.dmcapps.proto.catalog.Category
 
 mp.messaging.outgoing.products.connector=smallrye-kafka
 mp.messaging.outgoing.products.topic=products
@@ -37,6 +27,12 @@ mp.messaging.outgoing.categories.connector=smallrye-kafka
 mp.messaging.outgoing.categories.topic=categories
 mp.messaging.outgoing.categories.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.categories.specific.protobuf.value.type=io.dmcapps.proto.catalog.Category
+
+
+mp.messaging.outgoing.transactions.connector=smallrye-kafka
+mp.messaging.outgoing.transactions.topic=transactions
+mp.messaging.outgoing.transactions.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.transactions.specific.protobuf.value.type=io.dmcapps.proto.catalog.Transaction
 
 
 quarkus.http.port=8082
